--- a/production/form.html
+++ b/production/form.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	  
+
     <title>Gentelella Alela! | </title>
 
     <!-- Bootstrap -->
@@ -56,85 +56,85 @@
             <div class="clearfix"></div>
 
             <!-- menu profile quick info -->
-            <div class="profile clearfix">
-              <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
-              </div>
-              <div class="profile_info">
-                <span>(주)한이음/웹팀</span>
-                <h2>황채원</h2>
-              </div>
+          <div class="profile clearfix">
+            <div class="profile_pic">
+              <img src="images/user.png" alt="..." class="img-circle profile_img" id="menu_img">
             </div>
-            <!-- /menu profile quick info -->
-
-            <br />
-
-            <!-- sidebar menu -->
-            <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-              <div class="menu_section">
-                <!-- <h3>General</h3> -->
-                <ul class="nav side-menu">
-                  <li><a href="index.html"><i class="fa fa-home"></i> Dashboard </a>
-                  </li>
-                  <li><a><i class="fa fa-bar-chart-o"></i> 회의 분석 <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="echarts.html">지난 회의 결과</a></li>
-                      <li><a href="projects.html">회의록 리스트</a></li>
-                    </ul>
-                  </li>
-                  <li><a><i class="fa fa-edit"></i> 회의 관리 <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="form.html">회의 만들기</a></li>
-                      <li><a href="tables_dynamic.html">회의 예약리스트</a></li>
-                      <li><a href="project_detail.html">회의 중(임시)</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="tables.html"><i class="fa fa-group"></i> 친구 관리 </a>
-                  </li>
-                  <li><a href="calendar.html"><i class="fa fa-calendar"></i> 일정 관리 </a>
-                  </li>
-                  <li><a href="profile.html"><i class="fa fa-cog"></i> 개인 설정 </a>
-                  </li>
-                </ul>
-              </div>
-
+            <div class="profile_info">
+              <span id="menu_info"></span>
+              <h2 id="menu_name"></h2>
             </div>
-            <!-- /sidebar menu -->
-
           </div>
-        </div>
+          <!-- /menu profile quick info -->
 
-        <!-- top navigation -->
-        <div class="top_nav">
-          <div class="nav_menu">
-            <nav>
-              <div class="nav toggle">
-                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-              </div>
+          <br />
 
-              <ul class="nav navbar-nav navbar-right">
-                <li class="">
-                  <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">황채원
-                    <span class=" fa fa-angle-down"></span>
-                  </a>
-                  <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="javascript:;"> Profile</a></li>
-                    <li>
-                      <a href="javascript:;">
-                        <span class="badge bg-red pull-right">50%</span>
-                        <span>Settings</span>
-                      </a>
-                    </li>
-                    <li><a href="javascript:;">Help</a></li>
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+          <!-- sidebar menu -->
+          <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+            <div class="menu_section">
+              <!-- <h3>General</h3> -->
+              <ul class="nav side-menu">
+                <li><a href="index.html"><i class="fa fa-home"></i> Dashboard </a>
+                </li>
+                <li><a><i class="fa fa-bar-chart-o"></i> 회의 분석 <span class="fa fa-chevron-down"></span></a>
+                  <ul class="nav child_menu">
+                    <li><a href="echarts.html">지난 회의 결과</a></li>
+                    <li><a href="projects.html">회의록 리스트</a></li>
                   </ul>
                 </li>
+                <li><a><i class="fa fa-edit"></i> 회의 관리 <span class="fa fa-chevron-down"></span></a>
+                  <ul class="nav child_menu">
+                    <li><a href="form.html">회의 만들기</a></li>
+                    <li><a href="tables_dynamic.html">회의 예약리스트</a></li>
+                    <li><a href="project_detail.html">회의 중(임시)</a></li>
+                  </ul>
+                </li>
+                <li><a href="tables.html"><i class="fa fa-group"></i> 친구 관리 </a>
+                </li>
+                <li><a href="calendar.html"><i class="fa fa-calendar"></i> 일정 관리 </a>
+                </li>
+                <li><a href="profile.html"><i class="fa fa-cog"></i> 개인 설정 </a>
+                </li>
               </ul>
-            </nav>
+            </div>
+
           </div>
+          <!-- /sidebar menu -->
+
         </div>
-        <!-- /top navigation -->
+      </div>
+
+      <!-- top navigation -->
+      <div class="top_nav">
+        <div class="nav_menu">
+          <nav>
+            <div class="nav toggle">
+              <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+            </div>
+
+            <ul class="nav navbar-nav navbar-right">
+              <li class="">
+                <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                  <img src="images/user.png" id="bar_img"><span id="bar_name">황채원</span>
+                  <span class=" fa fa-angle-down"></span>
+                </a>
+                <ul class="dropdown-menu dropdown-usermenu pull-right">
+                  <li><a href="javascript:;"> Profile</a></li>
+                  <li>
+                    <a href="javascript:;">
+                      <span class="badge bg-red pull-right">50%</span>
+                      <span>Settings</span>
+                    </a>
+                  </li>
+                  <li><a href="javascript:;">Help</a></li>
+                  <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <!-- /top navigation -->
 
         <!-- page content -->
         <div class="right_col" role="main">
@@ -164,32 +164,32 @@
                     <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
 
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">회의 주제 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">회의 이름 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
+                          <input type="text" id="mname" required="required" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">회의 날짜 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12  date" >
-                          <input type="text" id="myDatepicker2" name required="required" class="form-control col-md-7 col-xs-12">
-                          
+                          <input type="text" id="date" name required="required" class="form-control col-md-7 col-xs-12">
+
                         </div>
                       </div>
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">회의 시간 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12 date">
-                          <input id="myDatepicker3" required="required" class="form-control col-md-7 col-xs-12" type="text" name>
+                          <input id="time" required="required" class="form-control col-md-7 col-xs-12" type="text" name>
                         </div>
                       </div>
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">회의 장소 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="birthday" class="form-control col-md-7 col-xs-12" required="required" type="text">
+                          <input id="where" class="form-control col-md-7 col-xs-12" required="required" type="text">
                         </div>
                       </div>
                       <div class="form-group">
@@ -208,14 +208,14 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <label for="meet_memo" class="control-label col-md-3 col-sm-3 col-xs-12">비고 
+                        <label for="meet_memo" class="control-label col-md-3 col-sm-3 col-xs-12">비고
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <textarea id="meet_memo" class="form-control col-md-7 col-xs-12">
                           </textarea>
                         </div>
                       </div>
-                      
+
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
@@ -260,7 +260,7 @@
     <!-- bootstrap-daterangepicker -->
     <script src="../vendors/moment/min/moment.min.js"></script>
     <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-    <!-- bootstrap-datetimepicker -->    
+    <!-- bootstrap-datetimepicker -->
     <script src="../vendors/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <!-- bootstrap-wysiwyg -->
     <script src="../vendors/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js"></script>
@@ -282,6 +282,7 @@
     <script src="../vendors/starrr/dist/starrr.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.js"></script>
+    <script src="./js/cookie.js"></script>
 
     <script>
       $('#myDatepicker2').datetimepicker({
@@ -296,6 +297,42 @@
           $('.select2').select2();
       });
     </script>
-	
+
+    <script>
+
+    var unum = getCookie('unum')? getCookie('unum'): 1;
+
+    $(document).ready(function(){
+      printMyInfo();
+    });
+
+
+      function postMeetingInfo() {
+        var id = $("#id").val();
+        var pw = $("#pw").val();
+
+        var settings = {
+          crossDomain: true,
+          url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/login",
+          type: "POST",
+          contentType: "application/json",
+          data: `{
+            "uid": "${id}",
+            "pw": "${pw}"
+          }`
+        }
+
+        $.ajax(settings)
+          .done(function (response) {
+            document.cookie = `unum=${response.unum}`;
+            alert(document.cookie);
+            window.location.replace("https://s3.ap-northeast-2.amazonaws.com/elasticbeanstalk-ap-northeast-2-850538120357/views/dashboard.html");
+          })
+          .fail(function () {
+            alert('fail');
+          });
+      }
+    </script>
+
   </body>
 </html>
