--- a/production/project_detail.html
+++ b/production/project_detail.html
@@ -188,19 +188,19 @@
                           <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                          <h3 class="green" id="mname"><i class="fa fa-paint-brush"></i> 회의 주제입니다.</h3>
+                          <h3 class="green" id="mname"><i class="fa fa-paint-brush"></i></h3>
 
-                          <p id="memo">비고입니다.</p>
+                          <p id="memo"></p>
                           <br /><!--메모/비고-->
 
                           <div class="project_detail">
 
                             <p class="title">날짜</p>
-                            <p id="date">2018-09-28</p>
+                            <p id="date"></p>
                             <p class="title">시간</p>
-                            <p id="date_time">왜안뜨냐 너</p>
+                            <p id="date_time"></p>
                             <p class="title">장소</p>
-                            <p id="where">Toz 회의실</p>
+                            <p id="where"></p>
                           </div>
 
                           <br />
