--- a/production/projects.html
+++ b/production/projects.html
@@ -158,7 +158,7 @@
                         </tr>
                       </thead>
                       <tbody id="table_body">
-                          
+
                       </tbody>
                     </table>
                     <!-- end 전체 회의록 -->
@@ -192,6 +192,8 @@
     <script src="../vendors/nprogress/nprogress.js"></script>
     <!-- bootstrap-progressbar -->
     <script src="../vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+    <!-- DateJS -->
+    <script src="../vendors/DateJS/build/date.js"></script>
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js"></script>
@@ -234,7 +236,7 @@
                     </li>
                   `
                 }
-                var date = new Date(data[i].date);
+                var date = new Date(data[i].date).addHours(-9).addMonths(1);
                 var tr = `
                   <tr>
                     <td>${data[i].mname}</td>
