--- a/production/echarts.html
+++ b/production/echarts.html
@@ -168,7 +168,7 @@
                           <h4><label>총 회의 시간</label></h4>
                         </div>
                         <div class="col-md-7 col-sm-12 col-xs-12">
-                          <h4><span id="time_all">1시간 30분 20초</span></h4>
+                          <h4><span id="time_all"></span></h4>
                         </div>
                       </div>
                     </div>
@@ -184,7 +184,7 @@
                   </div>
                   <div class="x_content text-center" style="height: 300px">
                     <!-- 회의 첨부파일 이미지 -->
-                    <img src="images/meeting_01.jpg" id="" style="max-height: 100%; max-width: 100%">
+                    <img src="images/tmp.png" id="" style="max-height: 100%; max-width: 100%">
                   </div>
                 </div>
               </div>
